# pm

./: .gitignore  .pre-commit-config.yaml  .proj-cfg  Makefile  README.md  dev.py  pyproject.toml  test_cli.py
pm/: __init__.py  __main__.py  app_args.py  argparse.py  argparser.py  args.py  cli.py  commands.py  config.py  const.py  db.py  models.py  printer.py  proj.py  proj_man.py  proj_manager.py  proj_mgmt.py  proj_print.py  proto.py  typedef.py  util.py  utils.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
tests/: test_argparser.py  test_cli.py  test_commands.py  test_utils.py
